app/assets/stylesheets/default/theme.css.scss
@import url(http://fonts.googleapis.com/css?family=Play:400,700);

// All-in-one style file :)
// Divides by sections

// Before everything: CSS Reset

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    vertical-align: baseline;
}
// HTML5 display-role reset for older browsers
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    font-family: Play, Sans, Verdana, Helvetica, serif;
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}

// CSS Reset end

// =====================================================================================================================
// = Common parameters =================================================================================================
// =====================================================================================================================

// Colors, used in site.
// Please, don't use inline colors in any part of CSS/SCSS.

$red: #a40000;
$yellow: #fcaf3e;
$gray: #babdb6;
$dark-gray: #2e3436;
$steel: #555753;
$white: #d3d7cf;
$blue: #729fcf;
$green: #8ae234;

// Usable classes-like-inline-stylers.

.clear {
  clear: both;
}

.center-block {
  margin: 0 auto;
}

.center {
  text-align: center;
}

.rightfloat {
  float: right;
  clear: both;
}


// Usable mixins

@mixin padding {
  padding: 1%;
}

@mixin margin {
  margin: 1%;
}

@mixin ramochka_mikhaila {
  border-radius: 8px;
}

// General theming

body {
  background-color: #333;
  color: white;
  font-size: 1em;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 4px;
  line-height: 1.2em;
  overflow-x: hidden;
}

// Links

a {
    transition: color 0.3s linear 0s;
    -webkit-transition: color 0.3s linear 0s;
    color: #aaa;
    text-decoration: none;
}

a:hover {
    transition: color 0.3s linear 0s;
    -webkit-transition: color 0.3s linear 0s;
    color: #2399cc;
}

// Typography

h3 {
  font-size: 1.75em;
  line-height: 1.95em;
  font-weight: bold;
}

h4 {
  font-size: 1.5em;
  line-height: 1.7em;
}

p {
  margin: 8px 0;
  &.small {
    margin: 0;
    font-size: 8pt;
  }
}

i, em {
  font-style: italic;
}

ul {
  margin-left: 30px;
  list-style: square;
}

b {
  font-weight: bold;
}
// Error messages

.flash {
  @include padding;
  @include margin;
  @include ramochka_mikhaila;
}

.flash_error {
  background: $red;
}

.flash_notice {
  background: $green;
  color: $dark-gray;
}

// Forms

input, select {
  width: 40em;
}

input[type="checkbox"] {
  width: 1em;
}

div.field_with_errors {
  margin: 0;
  padding: 0;
}

// =====================================================================================================================

// Header

.siteheader {
    position: relative;
    padding-bottom: 0.2em;
    background-color: #424242;
    color: white;
    border-radius: 5px;
    padding: 5px;
    padding-right: 10px;
    -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
    -moz-box-shadow:    0px 0px 5px rgba(0, 0, 0, 0.8);
    box-shadow:         0px 0px 5px rgba(0, 0, 0, 0.8);
    margin-top: -8px;
    margin-left: -8px;
    margin-right: -8px;
}

.siteheader a {
    transition: color 0.3s, text-shadow 0.3s linear 0s;
    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
    color: #aaa;
    text-shadow:         0px 0px 5px rgba(0, 0, 0, 0.8);
}

.siteheader a:hover {
    transition: color 0.3s, text-shadow 0.3s linear 0s;
    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
    color: #47bbff;
    text-shadow:         0px 0px 5px rgba(200, 200, 200, 0.8);
}

.logo {
  display: block;
  width: 10em;
  height: 2.2em;
  line-height: 2.2em;
  text-align: center;
  font-weight: bold;
}

.header_link {
    float: right;
    margin-right: 5px;
    margin-left: 5px;
    /*border-bottom: 2px solid #ddd;
    color: #aaa;
    transition: border 0.5s linear 0s;*/
}

.header_link:hover {
    /*border-bottom: 2px solid #47bbff;
    transition: border 0.5s linear 0s;
    -webkit-transition: border 0.5s linear 0s;
    color: white;*/
}


// Footer
.footer_text {
    font-size: 75%;
}


// Content

.content {
  @include padding;
  min-height: 100px;
}

// =====================================================================================================================

// Forum

// =====================================================================================================================

// Forum list

.forum_p {
    line-height: 1;
    margin: 0;
    margin-top: 2px;
    padding: 1px;
}

.forum_container {
}

.forum_container a {
    transition: color 0.3s, text-shadow 0.3s linear 0s;
    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
    color: #aaa;
    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
}

.forum_container a:hover {
    transition: color 0.3s, text-shadow 0.3s linear 0s;
    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
    color: #47bbff;
    text-shadow:         0px 0px 5px rgba(200, 200, 200, 0.8);
}

.metaforum {
    background-color: #767676;
    color: white;
    margin-bottom: 5px;
    border: 1px solid #666;
    padding: 5px;
    border-radius: 4px;
    -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
    -moz-box-shadow:    0px 0px 5px rgba(0, 0, 0, 0.8);
    box-shadow:         0px 0px 5px rgba(0, 0, 0, 0.8);
}

.forum_data {
    height: 4em;
    border: 1px solid #888;
}

.forum {
    float: left;
    width: 59%;
    background-color: #555;
    margin: 0;
    padding: 0;
    min-height: 4em;
    padding-left: 5px;
}

.forum_posts {
    float: left;
    width: 10%;
    background-color: #555;
    text-align: center;
    min-height: 4em;
    border-left: 1px solid #222;
    border-right: 1px solid #222;
}

.forum_last_topic {
    float: left;
    width: 29.9%;
    background-color: #555;
    min-height: 4em;
    max-height: 4em;
    padding-right: 5px;
    text-align: right;
}

.forum_index_avatar {
    padding-top: 5px;
    width: 48px;
    float: right;
    padding-left: 5px;
    @include ramochka_mikhaila
}

// Posts list

.add_new_post {
    background-color: #555;
    padding: 5px;
    margin-bottom: 5px;
    border-radius: 5px;
}


.posts_list {
    border: 1px solid #666;
    border-radius: 4px;
    -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
    -moz-box-shadow:    0px 0px 5px rgba(0, 0, 0, 0.8);
    box-shadow:         0px 0px 5px rgba(0, 0, 0, 0.8);
    background-color: #767676;
    color: white;
    padding: 5px;
}

.posts_list a {
    transition: color 0.3s, text-shadow 0.3s linear 0s;
    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
    color: #aaa;
    text-shadow:         0px 0px 5px rgba(0, 0, 0, 0.8);
}

.posts_list a:hover {
    transition: color 0.3s, text-shadow 0.3s linear 0s;
    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
    color: #47bbff;
    text-shadow:         0px 0px 5px rgba(200, 200, 200, 0.8);
}

.post_title_hint {
    float: left;
    width: 77.8%;
    background-color: #777;
    padding: 3px;
}

.post_last_change_hint {
    float: left;
    width: 21%;
    background-color: #777;
    padding: 3px;
    border-left: 1px solid #666;
}

.post_title {
    float: left;
    width: 77.8%;
    padding: 3px;
    border-top: 1px solid #666;
    background-color: #555;
    height: 2.7em;
}

.post_last_change {
    float: left;
    width: 21%;
    padding: 3px;
    border-left: 1px solid #666;
    border-top: 1px solid #666;
    background-color: #555;
    height: 2.7em;
}

.post_last_change_avatar {
    padding-top: 5px;
    width: 38px;
    float: right;
    padding-left: 5px;
    @include ramochka_mikhaila
}

// Post

.post {
    border: 1px solid #666;
    border-radius: 4px;
    -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
    -moz-box-shadow:    0px 0px 5px rgba(0, 0, 0, 0.8);
    box-shadow:         0px 0px 5px rgba(0, 0, 0, 0.8);
    background-color: #424242;
    color: white;
    margin-top: 5px;
}

.post a {
    transition: color 0.3s, text-shadow 0.3s linear 0s;
    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
    color: #aaa;
    text-shadow:         0px 0px 5px rgba(0, 0, 0, 0.8);
}

.post a:hover {
    transition: color 0.3s, text-shadow 0.3s linear 0s;
    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
    color: #47bbff;
    text-shadow:         0px 0px 5px rgba(200, 200, 200, 0.8);
}

.post_upper {
    width: 99%;
    float: left;
}

.post_info {
    float: left;
    width: 50%;
    background-color: #424242;
    padding: 5px;
    padding-right: 0;
}

.post_actions {
    width: 48%;
    float: right;
    text-align: right;
}

p.user_name {
    font-size: 1.3em;
    text-align: center;
}

.user_info {
    float: left;
    width: 13%;
    min-height: 220px;

    background-color: #424242;
    padding: 5px;
}

.user_data {
    font-size: 0.8em;
    background: #555;
    padding: 5px;
    border-radius: 5px;
}

.message {
  position: relative;
  float: left;
  width: 85%;
  margin-left: 5px;
}

.avatar {
  width: 100%;
  text-align: center;
  img {
    @include ramochka_mikhaila;
  }
}

textarea {
    width: 98%;
    border: 1px solid #aaa;
    border-radius: 5px;
    padding: 5px;
}

button {
    border-radius: 5px;
    border: 1px solid #aaa;
    padding: 3px;
}

.add_comment {
    float: left;
    width: 85%;
    margin-left: 5px;
}

.response-to-message-button {
    cursor: pointer;
}

.response-to-message {
  display: none;
}

// NEWS
.news_item {
    border: 1px solid #666;
    border-radius: 4px;
    -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
    -moz-box-shadow:    0px 0px 5px rgba(0, 0, 0, 0.8);
    box-shadow:         0px 0px 5px rgba(0, 0, 0, 0.8);
    background-color: #424242;
    color: white;
    margin-top: 5px;
    padding: 5px;
    overflow: auto;
}

.news_item_header {
    float: left;
    font-size: 1.4em;
}

.news_item_created {
    float: right;
}

.news_item_text {
    margin-top: 5px;
}

.news_item_info {
    float: right;
    margin-top: 5px;
}

.news_item a {
    transition: color 0.3s, text-shadow 0.3s linear 0s;
    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
    color: #aaa;
    text-shadow:         0px 0px 5px rgba(0, 0, 0, 0.8);
}

.news_item a:hover {
    transition: color 0.3s, text-shadow 0.3s linear 0s;
    -webkit-transition: color 0.3s, text-shadow 0.3s linear 0s;
    color: #47bbff;
    text-shadow:         0px 0px 5px rgba(200, 200, 200, 0.8);
}

// =============================================================================================================
// = Tracker ===================================================================================================
// =============================================================================================================

.tracker_line {
  width:  100%;
}

.tracker_link, .tracker_date {
  display: inline-block;
  position: relative;
}

.tracker_link {
  width:  80%;
}

